 * Added policies page with a link to OpenDOAR.
 * Linked to policies page from default homepage.

2008-05-22 tdb
 * Moved XML::tidy from DataObjs into export plugins
 * Removed getElementsByTagName in DataObj::File, fixing #3376

2008-05-22 tdb
 * Added "url" and "data" virtual fields to DataObj::File
 * Simplified and made Import::XMLFiles inherit from Import::XML (moved
    file-specific code into DataObj::File)
 * MetaField::is_virtual now looks at a "virtual" property, allowing any field
    type to be defined as virtual
 * Pass opts into MetaField from DataObj::to_xml
 * Added "Base64" field type, that just adds "encoding" attribute to_xml
 * Adding a file to a document that has main set incorrectly now overwrites the
    main value with the first file (as if it was unset)
 * Added file dataset to erase_eprints epadmin command
 * XMLFiles export now embeds all files, not just data files, and includes the
    EP data namespace
 * Fixed DataObj::File::get_defaults not overwriting fileid values
 * Fixed removing files

2008-05-24 cjg
 * Added SWORD support.

2008-05-27 tdb
 * Added --description and --source-repository options to bin/import

2008-05-29 cjg
 * Fixed bug in rendering of XHTML values in EPScript.
 * Fixed some out-of-data apache methods in the VLit extension.
 * Fixed a typo in the toolbox code s/AND/ANY/
 * Fixed missing / with redirecting /perl/ to /cgi/

2008-06-02 tdb
 * Removed set_timer() method - MySQL already supports slow query logging
 * Weaken the memory cycle between DataObjs and Session (current_user)
 * Staff eprint action screen to change eprint owner

2008-06-03 tdb
 * Moved tokenizing code from Index.pm into Index/Tokenizer.pm
 * Sort field values using the database

2008-06-04 tdb
 * Fixed views not working for name-type metafields, fixing #3380

2008-06-04 cjg
 * Fixed bug which meant only first attachment to an email actually
    got attached.

2008-06-05 tdb
 * Trap die()s in Repository::parse_xml(), fixing #3220
